# ranged_set

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  appveyor.yml
.github/workflows/: CI.yml  coverage.yml
src/: element.rs  lib.rs  range_inclusive.rs  set.rs
src/element/: mod.rs  tests.rs
src/set/: mod.rs  tests.rs
